@@ -30,6 +30,8 @@ has target => (
     weak_ref => 1,
     handles => {
         uri         => 'uri',
+        username    => 'username',
+        password    => 'password',
         client      => 'client',
         registry    => 'registry',
         destination => 'name',
