@@ -219,11 +219,12 @@ ok $fb->_capture(qw(foo bar baz)), 'Call _capture';
 is_deeply \@capture, [$fb->isql, qw(foo bar baz)],
     'Command should be passed to capture()';
 
-# Remove the password from the URI.
-$target->uri->password(undef);
+# Without password.
+$target = App::Sqitch::Target->new( sqitch => $sqitch );
 ok $fb = $CLASS->new(sqitch => $sqitch, target => $target),
     'Create a firebird with sqitch with no pw';
 $exp_pass = undef;
+$target->uri->password($exp_pass);
 ok $fb->_run(qw(foo bar baz)), 'Call _run again';
 is_deeply \@run, [$fb->isql, qw(foo bar baz)],
     'Command should be passed to run() again';
