@@ -202,8 +202,8 @@ ok $pg->_capture(qw(foo bar baz)), 'Call _capture';
 is_deeply \@capture, [$pg->psql, qw(foo bar baz)],
     'Command should be passed to capture()';
 
-# Remove the password.
-$target->uri->password(undef);
+# Without password.
+$target = App::Sqitch::Target->new( sqitch => $sqitch );
 ok $pg = $CLASS->new(sqitch => $sqitch, target => $target),
     'Create a pg with sqitch with no pw';
 $exp_pass = undef;
